party page height fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -483,7 +483,7 @@ img {
     padding-top: 120px;
   }
   .hero.party {
-    height: 85vh;
+    height: 100vh;
   }
   .flex-items {
     flex-direction: column;
